--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "element-plus": "^2.5.6",
+    "pinia": "^2.1.7",
     "router": "^1.3.8",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
