--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
